<resources>
    <string name="app_name">BMI Analyser</string>
    <string name="new_record">New Record</string>
    <string name="subtract">-</string>
    <string name="date">Date</string>
    <string name="save_date">Save Date</string>
    <string name="length">Length</string>
    <string name="weigth">Weigth</string>
    <string name="Addition">+</string>
    <string name="subtraction">-</string>
    <string name="Add">+</string>
    <string name="time">Time</string>
    <string name="complete_your_information">Complete Your Information</string>
    <string name="gender">Gender</string>
    <string name="male">Male</string>
    <string name="female">female</string>
    <string name="weight">Weight</string>
    <string name="subtraction1">-</string>
    <string name="Addition1">+</string>
    <string name="length1">Length</string>
    <string name="subtraction2">-</string>
    <string name="Addition2">+</string>
    <string name="date_of_birth">Date Of Birth</string>
    <string name="save_date1">Save Date</string>
    <string name="welcom_back">Welcom Back</string>
    <string name="if_you_already_have_an_account_login">if you already have an account login</string>
    <string name="username">UserName</string>
    <string name="password">password</string>
    <string name="log_in">LOG IN</string>
    <string name="you_dont_have_an_account">You dont have an account?</string>
    <string name="sign_up">Sign Up</string>
    <string name="next">Next</string>
    <string name="todo1">TODO</string>
    <string name="creat_new_account">Creat New Account</string>
    <string name="if_you_do_not_already_have_an_account">if you do not already have an account</string>
    <string name="name3">Name</string>
    <string name="email">Email</string>
    <string name="re_password">Re-Password</string>
    <string name="create">CREATE</string>
    <string name="you_have_an_account">You Have An Account?</string>
    <string name="login">Login</string>
    <string name="password1">Password</string>
    <string name="add_food_detalis">Add Food Detalis</string>
    <string name="name2">Name</string>
    <string name="categary">Categary</string>
    <string name="calory">Calory</string>
    <string name="photo">Photo</string>
    <string name="button">Button</string>
    <string name="todo2">TODO</string>
    <string name="upload_photo">Upload Photo</string>
    <string name="save">Save</string>
    <string name="todo">bm</string>
    <string name="name5">Name</string>
    <string name="todo3">todo</string>
    <string name="name1">name7</string>
    <string name="name">Name</string>
    <string name="edit_food_detalis">Edit Food Detalis</string>
    <string name="todo7">TODO</string>
    <string-array name="num">
        <item>meet</item>
        <item>chicken</item>
        <item>fish</item>

    </string-array>

</resources>