<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".EditFoodDetails">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/textView40"
            android:layout_width="200dp"
            android:layout_height="50dp"
            android:layout_marginTop="10dp"
            android:text="" />

        <Button
            android:id="@+id/button17"
            android:layout_width="150dp"
            android:layout_height="90dp"
            android:layout_marginStart="245dp"
            android:layout_marginTop="690dp"
            android:text="@string/save"
            android:textSize="30sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/button10"
            android:layout_width="200dp"
            android:layout_height="90dp"
            android:layout_marginStart="35dp"
            android:layout_marginTop="690dp"
            android:text="@string/upload_photo"
            android:textSize="30sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/textView39"
            android:layout_width="100dp"
            android:layout_height="40dp"
            android:layout_marginStart="20dp"
            android:layout_marginTop="400dp"
            android:text="@string/photo"
            android:textColor="#318CFB"
            android:textSize="30sp" />

        <TextView
            android:id="@+id/textView38"
            android:layout_width="100dp"
            android:layout_height="50dp"
            android:layout_marginStart="20dp"
            android:layout_marginTop="300dp"
            android:text="@string/calory"
            android:textColor="#318CFB"
            android:textSize="30sp" />

        <TextView
            android:id="@+id/textView37"
            android:layout_width="150dp"
            android:layout_height="50dp"
            android:layout_marginStart="20dp"
            android:layout_marginTop="230dp"
            android:text="@string/categary"
            android:textColor="#318CFB"
            android:textSize="30sp" />

        <TextView
            android:id="@+id/textView36"
            android:layout_width="100dp"
            android:layout_height="50dp"
            android:layout_marginStart="20dp"
            android:layout_marginTop="150dp"
            android:text="@string/name"
            android:textColor="#318CFB"
            android:textSize="30sp" />

        <TextView
            android:id="@+id/textView35"
            android:layout_width="310dp"
            android:layout_height="50dp"
            android:layout_marginStart="60dp"
            android:layout_marginTop="70dp"
            android:gravity="center|center_horizontal"
            android:text="@string/edit_food_detalis"
            android:textColor="#318CFB"
            android:textSize="35sp"
            android:textStyle="bold" />

        <Spinner
            android:id="@+id/spacer1"
            android:layout_width="200dp"
            android:layout_height="30dp"
            android:layout_marginStart="200dp"
            android:layout_marginTop="230dp"
            android:entries="@array/num" />

        <ImageView
            android:id="@+id/imageView3"
            android:layout_width="350dp"
            android:layout_height="200dp"
            android:layout_marginStart="20dp"
            android:layout_marginTop="450dp"
            android:contentDescription="@string/todo7" />
    </RelativeLayout>
</LinearLayout>