<?xml version="1.0" encoding="UTF-8"?>

<RelativeLayout tools:context=".Login"
    android:background="#F4F1F1"
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <TextView
        android:id="@+id/textView"
        android:layout_width="40dp"
        android:layout_height="70dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="40dp"
        android:foregroundGravity="center|center_horizontal"
        android:gravity="center|center_horizontal"
        android:text="@string/welcom_back"
        android:textColor="#071563"
        android:textSize="34sp" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="40dp"
        android:layout_height="70dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="130dp"
        android:layout_marginBottom="511dp"
        android:text="@string/if_you_already_have_an_account_login"
        android:textColor="#EB2E2D2D"
        android:textSize="24sp" />

    <EditText
        android:id="@+id/editTextTextPassword"
        android:layout_width="39dp"
        android:layout_height="55dp"
        android:layout_below="@+id/editTextTextPersonName"
        android:layout_alignParentStart="true"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="٢٤dp"
        android:layout_marginTop="250dp"
        android:ems="10"
        android:gravity="start"
        android:hint="@string/username"
        android:inputType="textPassword"
        android:textColorHint="#101010"
        android:textSize="25sp"
        tools:ignore="UnknownId"
        android:autofillHints="" />

    <EditText
        android:id="@+id/editTextNumberPassword"
        android:layout_width="380dp"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="20dp"
        android:layout_marginBottom="0dp"
        android:ems="20"
        android:hint="@string/password"
        android:inputType="numberPassword"
        android:textColorHint="#221F1F"
        android:textSize="25sp"
        android:autofillHints="" />

    <Button
        android:id="@+id/login"
        android:layout_width="20dp"
        android:layout_height="70dp"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="28dp"
        android:text="@string/log_in"
        android:textSize="24sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="70dp"
        android:layout_marginBottom="250dp"
        android:text="@string/you_dont_have_an_account"
        android:textColorHint="#171616"
        android:textSize="16sp" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="270dp"
        android:layout_marginTop="460dp"
        android:text="@string/sign_up" />

</RelativeLayout>