<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AddFood">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:layout_editor_absoluteX="-٢٠٣dp"
        tools:layout_editor_absoluteY="-١٩١dp">

        <TextView
            android:id="@+id/textView22"
            android:layout_width="310dp"
            android:layout_height="50dp"
            android:layout_marginStart="60dp"
            android:layout_marginTop="70dp"
            android:gravity="center|center_horizontal"
            android:text="@string/add_food_detalis"
            android:textColor="#318CFB"
            android:textSize="35sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/textView23"
            android:layout_width="100dp"
            android:layout_height="50dp"
            android:layout_marginStart="20dp"
            android:layout_marginTop="150dp"
            android:text="@string/name1"
            android:textColor="#318CFB"
            android:textSize="30sp" />

        <TextView
            android:id="@+id/textView29"
            android:layout_width="150dp"
            android:layout_height="50dp"
            android:layout_marginStart="20dp"
            android:layout_marginTop="230dp"
            android:text="@string/categary"
            android:textColor="#318CFB"
            android:textSize="30sp" />

        <TextView
            android:id="@+id/textView30"
            android:layout_width="100dp"
            android:layout_height="50dp"
            android:layout_marginStart="20dp"
            android:layout_marginTop="300dp"
            android:text="@string/calory"
            android:textColor="#318CFB"
            android:textSize="30sp" />

        <TextView
            android:id="@+id/textView31"
            android:layout_width="200dp"
            android:layout_height="50dp"
            android:layout_marginStart="200dp"
            android:layout_marginTop="150dp" />

        <TextView
            android:id="@+id/textView32"
            android:layout_width="200dp"
            android:layout_height="50dp"
            android:layout_marginStart="200dp"
            android:layout_marginTop="230dp" />

        <TextView
            android:id="@+id/textView33"
            android:layout_width="200dp"
            android:layout_height="50dp"
            android:layout_marginStart="200dp"
            android:layout_marginTop="300dp" />

        <TextView
            android:id="@+id/textView34"
            android:layout_width="100dp"
            android:layout_height="40dp"
            android:layout_marginStart="20dp"
            android:layout_marginTop="400dp"
            android:text="@string/photo"
            android:textColor="#318CFB"
            android:textSize="30sp" />

        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="400dp"
            android:layout_height="200dp"
            android:layout_marginStart="20dp"
            android:layout_marginTop="480dp"
            android:contentDescription="@string/todo3"
            app:srcCompat="@drawable/friute" />

        <Button
            android:id="@+id/button9"
            android:layout_width="200dp"
            android:layout_height="90dp"
            android:layout_marginStart="40dp"
            android:layout_marginTop="690dp"
            android:text="@string/upload_photo"
            android:textSize="30sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/button11"
            android:layout_width="200dp"
            android:layout_height="90dp"
            android:layout_marginStart="250dp"
            android:layout_marginTop="690dp"
            android:text="@string/save"
            android:textSize="30sp"
            android:textStyle="bold" />
    </RelativeLayout>
</androidx.constraintlayout.widget.ConstraintLayout>