<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#F1F4FB"
    tools:context=".Registration">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="١٢٤dp"
        android:layout_marginEnd="٧٢dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/textView6"
            android:layout_width="450dp"
            android:layout_height="50dp"
            android:layout_alignWithParentIfMissing="false"
            android:layout_alignParentStart="false"
            android:layout_alignParentEnd="false"
            android:layout_alignParentBottom="false"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="50dp"
            android:contextClickable="false"
            android:gravity="center|center_horizontal|top"
            android:text="@string/creat_new_account"
            android:textAlignment="center"
            android:textColor="#126CDC"
            android:textSize="34sp"
            android:textStyle="bold"
            app:autoSizeTextType="none" />

        <TextView
            android:id="@+id/textView7"
            android:layout_width="450dp"
            android:layout_height="50dp"
            android:layout_alignParentTop="true"
            android:layout_marginStart="40dp"
            android:layout_marginTop="117dp"
            android:gravity="center|center_horizontal|top"
            android:text="@string/if_you_do_not_already_have_an_account"
            android:textColor="#090909"
            android:textSize="16sp" />

        <EditText
            android:id="@+id/editTextTextPersonName2"
            android:layout_width="350dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="180dp"
            android:ems="10"
            android:hint="@string/name"
            android:inputType="textPersonName"

            android:textColorHint="#686666"
            android:textSize="34sp"
            android:autofillHints="" />

        <EditText
            android:id="@+id/editTextTextEmailAddress"
            android:layout_width="350dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="240dp"
            android:ems="10"
            android:hint="@string/email"
            android:inputType="textEmailAddress"
            android:textColorHint="#686666"
            android:textSize="34sp"
            android:autofillHints="" />

        <EditText
            android:id="@+id/editTextNumberPassword3"
            android:layout_width="350dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="370dp"
            android:ems="10"
            android:hint="@string/re_password"
            android:inputType="numberPassword"

            android:textColorHint="#686666"
            android:textSize="34sp"
            android:autofillHints="" />

        <Button
            android:id="@+id/button3"
            android:layout_width="280dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="70dp"
            android:layout_marginTop="450dp"
            android:background="#007de4"
            android:backgroundTint="#007de4"
            android:gravity="center|center_horizontal"
            android:text="@string/create"
            android:textColor="@color/white"
            android:textSize="24sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/textView8"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:layout_marginStart="90dp"
            android:layout_marginTop="505dp"
            android:text="@string/you_have_an_account"
            android:textColor="#090909"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/textView9"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="260dp"
            android:layout_marginTop="505dp"
            android:text="@string/login"
            android:textColor="#0C0C0C"
            android:textSize="24sp" />

        <EditText
            android:id="@+id/editTextTextPassword2"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginStart="20dp"
            android:layout_marginTop="310dp"
            android:ems="1"
            android:hint="@string/password1"
            android:inputType="textPassword"
            android:textColorHint="#686666"
            android:textSize="34sp"
            android:autofillHints="" />

    </RelativeLayout>
</androidx.constraintlayout.widget.ConstraintLayout>