<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".NewRecord">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:id="@+id/button15"
                android:layout_width="250dp"
                android:layout_height="80dp"
                android:layout_marginStart="100dp"
                android:layout_marginTop="600dp"
                android:gravity="center|center_horizontal"
                android:text="@string/save_date"
                android:textSize="30sp" />

            <TextView
                android:id="@+id/textView28"
                android:layout_width="200dp"
                android:layout_height="50dp"
                android:layout_marginStart="200dp"
                android:layout_marginTop="500dp" />

            <TextView
                android:id="@+id/textView27"
                android:layout_width="150dp"
                android:layout_height="50dp"
                android:layout_marginStart="10dp"
                android:layout_marginTop="500dp"
                android:gravity="center|center_horizontal"
                android:text="@string/time"
                android:textColor="#318CFB"
                android:textSize="34sp" />

            <TextView
                android:id="@+id/textView26"
                android:layout_width="250dp"
                android:layout_height="50dp"
                android:layout_marginStart="200dp"
                android:layout_marginTop="400dp" />

            <TextView
                android:id="@+id/textView25"
                android:layout_width="150dp"
                android:layout_height="50dp"
                android:layout_marginStart="20dp"
                android:layout_marginTop="400dp"
                android:gravity="center|center_horizontal"
                android:text="@string/date"
                android:textColor="#318CFB"
                android:textSize="34sp" />

            <Button
                android:id="@+id/button14"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_marginStart="350dp"
                android:layout_marginTop="300dp"
                android:text="@string/Addition"
                android:textSize="30sp"
                tools:ignore="DuplicateSpeakableTextCheck" />

            <TextView
                android:id="@+id/textView24"
                android:layout_width="100dp"
                android:layout_height="50dp"
                android:layout_marginStart="245dp"
                android:layout_marginTop="300dp" />

            <Button
                android:id="@+id/button13"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_marginStart="190dp"
                android:layout_marginTop="300dp"
                android:text="@string/subtraction"
                android:textSize="30sp"
                tools:ignore="DuplicateSpeakableTextCheck" />

            <Button
                android:id="@+id/button12"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_marginStart="350dp"
                android:layout_marginTop="200dp"
                android:text="@string/Addition"
                android:textSize="25sp" />

            <TextView
                android:id="@+id/textView20"
                android:layout_width="100dp"
                android:layout_height="50dp"
                android:layout_marginStart="245dp"
                android:layout_marginTop="200dp" />

            <TextView
                android:id="@+id/textView19"
                android:layout_width="150dp"
                android:layout_height="50dp"
                android:layout_marginStart="20dp"
                android:layout_marginTop="200dp"
                android:foregroundGravity="center_vertical|center"
                android:gravity="center|center_horizontal"
                android:text="@string/weigth"
                android:textColor="#318CFB"
                android:textSize="30sp" />
        </RelativeLayout>

        <TextView
            android:id="@+id/textView21"
            android:layout_width="150dp"
            android:layout_height="50dp"
            android:layout_marginStart="20dp"
            android:layout_marginTop="300dp"
            android:gravity="center|center_horizontal"
            android:text="@string/length"
            android:textColor="#318CFB"
            android:textSize="30sp" />

        <Button
            android:id="@+id/button8"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_marginStart="190dp"
            android:layout_marginTop="200dp"
            android:background="#213CD5"
            android:text="@string/subtract"
            android:textColor="#F0F1F4"
            android:textSize="30sp" />

        <TextView
            android:id="@+id/textView18"
            android:layout_width="250dp"
            android:layout_height="50dp"
            android:layout_marginStart="100dp"
            android:layout_marginTop="100dp"
            android:foregroundGravity="center|center_horizontal"
            android:gravity="center|center_horizontal|center_vertical"
            android:text="@string/new_record"
            android:textColor="#318CFB"
            android:textSize="32sp"
            android:textStyle="bold" />

    </RelativeLayout>
</androidx.constraintlayout.widget.ConstraintLayout>